// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_a_-overview"
        data-value="overview"
        role="tab"
        tabindex="0"
        aria-selected="true"
        id=":ds-tab2"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-tests"
        data-value="tests"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-test-answers"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-settings"
        data-value="settings"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      id="_r_a_-overview"
      aria-hidden="false"
      role="tabpanel"
      aria-labelledby=":ds-tab2"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_a_-tests"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_a_-test-answers"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_a_-settings"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="dark-mode">
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="mmexwnxybcw11"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw11"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="auto-updates">
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="mmexwnxybcw12"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw12"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="mmexwnxybcw9 mmexwnxybcw10">
                <legend
                  data-weight="medium"
                  id="mmexwnxybcw9"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="mmexwnxybcw10"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="privacy-public">
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-friends">
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="mmexwnxybcw13"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="mmexwnxybcw13"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-private">
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="sound-notifications">
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="mmexwnxybcw14"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw14"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="popup-notifications">
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="mmexwnxybcw15"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw15"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="email-notifications">
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="mmexwnxybcw16"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw16"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_k_-overview"
        data-value="overview"
        role="tab"
        tabindex="0"
        aria-selected="true"
        id=":ds-tab3"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-tests"
        data-value="tests"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-test-answers"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-settings"
        data-value="settings"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      id="_r_k_-overview"
      aria-hidden="false"
      role="tabpanel"
      aria-labelledby=":ds-tab3"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_k_-tests"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_k_-test-answers"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_k_-settings"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="dark-mode">
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="mmexwnxybcw19"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw19"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="auto-updates">
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="mmexwnxybcw20"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw20"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="mmexwnxybcw17 mmexwnxybcw18">
                <legend
                  data-weight="medium"
                  id="mmexwnxybcw17"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="mmexwnxybcw18"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="privacy-public">
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-friends">
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="mmexwnxybcw21"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="mmexwnxybcw21"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-private">
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="sound-notifications">
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="mmexwnxybcw22"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw22"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="popup-notifications">
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="mmexwnxybcw23"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw23"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="email-notifications">
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="mmexwnxybcw24"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw24"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_u_-overview"
        data-value="overview"
        role="tab"
        tabindex="0"
        aria-selected="true"
        id=":ds-tab4"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-tests"
        data-value="tests"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-test-answers"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-settings"
        data-value="settings"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      id="_r_u_-overview"
      aria-hidden="false"
      role="tabpanel"
      aria-labelledby=":ds-tab4"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_u_-tests"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_u_-test-answers"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_u_-settings"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="dark-mode">
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="mmexwnxybcw27"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw27"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="auto-updates">
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="mmexwnxybcw28"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw28"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="mmexwnxybcw25 mmexwnxybcw26">
                <legend
                  data-weight="medium"
                  id="mmexwnxybcw25"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="mmexwnxybcw26"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="privacy-public">
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-friends">
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="mmexwnxybcw29"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="mmexwnxybcw29"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="privacy-private">
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="sound-notifications">
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="mmexwnxybcw30"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw30"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="popup-notifications">
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="mmexwnxybcw31"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw31"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="email-notifications">
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="mmexwnxybcw32"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="mmexwnxybcw32"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Story 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_0_-overview"
        data-value="overview"
        role="tab"
        tabindex="0"
        aria-selected="true"
        id=":ds-tab1"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-tests"
        data-value="tests"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-test-answers"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-settings"
        data-value="settings"
        role="tab"
        tabindex="-1"
        aria-selected="false"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      id="_r_0_-overview"
      aria-hidden="false"
      role="tabpanel"
      aria-labelledby=":ds-tab1"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_0_-tests"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_0_-test-answers"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      id="_r_0_-settings"
      hidden
      aria-hidden="true"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                >
                <label data-weight="regular">
                  Mørk modus
                </label>
                <div data-field="description">
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                >
                <label data-weight="regular">
                  Automatiske oppdateringer
                </label>
                <div data-field="description">
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label data-weight="regular">
                    Alle
                  </label>
                </ds-field>
                <ds-field>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                  >
                  <label data-weight="regular">
                    Kun venner
                  </label>
                  <div data-field="description">
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label data-weight="regular">
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <ds-field>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label data-weight="regular">
                  Lydvarsler
                </label>
                <div data-field="description">
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label data-weight="regular">
                  Popup-varsler
                </label>
                <div data-field="description">
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                >
                <label data-weight="regular">
                  E-postvarsler
                </label>
                <div data-field="description">
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;
